Fix logo text color in dark mode.

--- a/packages/web/src/assets/main.css
+++ b/packages/web/src/assets/main.css
@@ -63,3 +63,7 @@
 .p-popover::after {
   left: calc(130px) !important;
 }
+
+.logo-text {
+  color: var(--p-text-color);
+}
